syntax = "proto3";

package ampb;

option go_package = ",/;proto";

import "google/protobuf/timestamp.proto";

message EventMessageData {
  bytes payload = 1;
  google.protobuf.Timestamp occurred_at = 2;
}

message ReplyMessageData {
  bytes payload = 1;
  google.protobuf.Timestamp occurred_at = 2;
}

message CommandMessageData {
  bytes payload = 1;
  google.protobuf.Timestamp occurred_at = 2;
}
